# people_detector

./: CMakeLists.txt  README.md  package.xml
cfg/: vision_people_detector_hog.cfg
src/common/: vision_node.cpp  vision_node.hpp  vision_object_detector.cpp  vision_object_detector.hpp
src/vision_people_detector_hog/: vision_people_detector_hog.cpp  vision_people_detector_hog.hpp  vision_people_detector_hog_node.cpp  vision_people_detector_hog_node.hpp
